projects/mfn-allocation/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mfn-allocation
  labels:
    app.kubernetes.io/name: mfn-allocation
